# minecraft-versions-scraper

./: .gitignore  LICENSE  Pipfile  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
minedoscrazy/versions_getter/: __init__.py
tests/fixtures/: minecraftversions.py
tests/fixtures/pages/: minecraftversions.html
tests/unit/: test_minecraftversions.py
versions_getter/sources/: minecraftversions.py
versions_scraper/: __init__.py  cli.py  origin.py  scraper.py
versions_scraper/sources/: __init__.py  minecraftversions.py
